--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-.App {
+.login-form{
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin:auto;
+  height: 100%;
+}
+
+
+/*.App {
   text-align: center;
 }
 
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
